update| rag| finish basic pipeline

--- a/.env
+++ b/.env
@@ -3,4 +3,7 @@ MONGO_DB=finsight
 REDIS_URL=redis://localhost:6379/0
 EMBEDDING_PROVIDER=openai
 VECTOR_BACKEND=mongo
-LLM_PROVIDER=openai
+LLM_PROVIDER=deepseek_openai
+LLM_OPENAI_BASE=http://localhost:11434/v1
+LLM_OPENAI_API_KEY=ollama-local
+LLM_MODEL=deepseek-r1:8b
