--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ LLM_PROVIDER=deepseek_openai
 LLM_OPENAI_BASE=http://localhost:11434/v1
 LLM_OPENAI_API_KEY=ollama-local
 LLM_MODEL=deepseek-r1:8b
+
+AUTH_SECRET_KEY=deepsick
+AUTH_ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=1440
