--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,8 @@ dependencies = [
     "psycopg[binary,pool]>=3.1",
     "sqlalchemy>=2.0",
     "pgvector>=0.2.5",
+    "passlib[bcrypt]>=1.7",
+    "python-jose[cryptography]>=3.3",
 ]
 
 [project.optional-dependencies]
