update| ssh| finish the mongo ssh connection

--- a/.env
+++ b/.env
@@ -1,3 +1,14 @@
+SSH_TUNNEL=1
+SSH_HOST=54.252.234.223
+SSH_PORT=22
+SSH_USER=ubuntu
+SSH_PEM_PATH=finsight_keypair.pem
+
+REMOTE_MONGO_HOST=127.0.0.1
+REMOTE_MONGO_PORT=27017
+
+LOCAL_BIND_HOST=127.0.0.1
+LOCAL_BIND_PORT=0
 MONGO_URI=mongodb://localhost:27017
 MONGO_DB=finsight
 REDIS_URL=redis://localhost:6379/0
