stock_recommendation(stable)

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 MONGO_URI=mongodb://localhost:27017
-MONGO_DB=finsight
+MONGO_DB_STOCK=stock_data
+POSTGRES_URI=postgresql://stock_user:stock_password@localhost:5432/stock_recommendation
 REDIS_URL=redis://localhost:6379/0
 EMBEDDING_PROVIDER=openai
 VECTOR_BACKEND=mongo
