update | news | cannot connect

--- a/.env
+++ b/.env
@@ -28,6 +28,62 @@ POSTGRES_DB=finsight
 # LLM
 EMBEDDING_PROVIDER=openai
 LLM_PROVIDER=deepseek_openai
+
+
+# 固定本地映射端口（不要用 27017/5432，避免撞你本机服务）
+LOCAL_MONGO_HOST=127.0.0.1
+LOCAL_MONGO_PORT=27018
+LOCAL_PG_HOST=127.0.0.1
+LOCAL_PG_PORT=54330
+
+# 你的应用连接串“只指向本地映射端口”
+MONGO_URI=mongodb://127.0.0.1:27018
+MONGO_DB=finsight
+PG_DSN=postgresql://richsion@127.0.0.1:54330/finsight
+
+# 远端地址保持 127.0.0.1（通常 DB 只在远端本机监听）
+REMOTE_MONGO_HOST=127.0.0.1
+REMOTE_MONGO_PORT=27017
+REMOTE_PG_HOST=127.0.0.1
+REMOTE_PG_PORT=5432
+
+
+# 嵌入提供者：hash | st | openai(预留)
+EMBEDDING_PROVIDER=st
+ST_MODEL=sentence-transformers/all-MiniLM-L6-v2
+DEFAULT_VECTOR_DIM=64  # st 的默认维度是 384，建议同步一下默认（仅在 hash 等无 dim 属性时兜底用）
+
+# 投影配置
+PROJECTION_METHOD=srp
+PROJECTION_DIM=64
+PROJECTION_SEED=42
+
+# 向量后端：mongo | pgvector
+# VECTOR_BACKEND=mongo
+VECTOR_BACKEND=pgvector
+PG_DSN=postgresql://richsion@localhost:5432/finsight
+
+# —— 新闻抓取主源（必填：申请免费 key）——
+MARKETAUX_API_KEY=IJUUy1PENMpaxRIxgCSPVtKsPPWeyw3AYgARqfwl
+MARKETAUX_DEFAULT_SYMBOLS=AAPL,NVDA,MSFT,TSLA,AMZN,TCS.NS,INFY.NS
+
+# —— 关注股票池文件（JSON/CSV 二选一）——
+WATCHLIST_FILE=./watchlist.json
+
+# —— 抓取与配额控制 ——
+FETCH_QPS=0.5                # Marketaux 节流（每秒0.5次）
+DAILY_BUDGET_MARKETAUX=80    # 每日请求软上限
+# ENABLE_SCHEDULER=0
+
+# —— 调度 cron（分 时 日 月 周）——
+CRON_MARKETAUX_US=0 * * * *
+CRON_MARKETAUX_IN=10 * * * *
+# CRON_RSS_ALL=*/15 * * * *
+
+ENV=dev
+DEBUG=true
+
+LLM_PROVIDER=openai
 LLM_OPENAI_BASE=http://localhost:11434/v1
 LLM_OPENAI_API_KEY=ollama-local
 LLM_MODEL=deepseek-r1:8b
