--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,9 @@ dependencies = [
     "psycopg[binary,pool]>=3.1",
     "sqlalchemy>=2.0",
     "pgvector>=0.2.5",
+
+    # prediction model
+
 ]
 
 [project.optional-dependencies]
