--- a/.env
+++ b/.env
@@ -25,12 +25,27 @@ POSTGRES_USER=fin_user
 POSTGRES_PASSWORD=fin_pass
 POSTGRES_DB=finsight
 
-
+# LLM
 EMBEDDING_PROVIDER=openai
 LLM_PROVIDER=deepseek_openai
 LLM_OPENAI_BASE=http://localhost:11434/v1
 LLM_OPENAI_API_KEY=ollama-local
 LLM_MODEL=deepseek-r1:8b
+
+FALLBACK_BACKEND=ollama
+OLLAMA_BASE_URL=http://127.0.0.1:11434
+OLLAMA_MODEL=deepseek-r1:8b
+OLLAMA_SYSTEM_PROMPT=你是一个专业的金融研究助理，擅长中文分析。
+
+#RAGFLOW
+RAGFLOW_BASE_URL=http://localhost
+RAGFLOW_API_KEY=ragflow-NlNmNlZWQ2YWMyZDExZjA5ZjhkMzYwZm
+RAGFLOW_MODEL=deepseek-r1:8b
+RAGFLOW_APP_ID=
+RAG_MAX_HISTORY_TURNS=8
+RAGFLOW_TIMEOUT=60
+RAGFLOW_DATASET_IDS=
+RAGFLOW_CHAT_NAME_PREFIX=finsight-chat
 
 AUTH_SECRET_KEY=deepsick
 AUTH_ALGORITHM=HS256
