--- a/.env
+++ b/.env
@@ -47,6 +47,14 @@ RAGFLOW_TIMEOUT=600
 RAGFLOW_DATASET_IDS=
 RAGFLOW_CHAT_NAME_PREFIX=finsight-chat
 
+RAGFLOW_PROMPT_TEXT=You are a professional financial analyst. Use the knowledge base and chat history to answer. If not found in KB, explicitly say: "The answer you are looking for is not found in the knowledge base!"
+RAGFLOW_PROMPT_TOP_N=6
+RAGFLOW_PROMPT_SIMILARITY_THRESHOLD=0.2
+RAGFLOW_PROMPT_KW_WEIGHT=0.7
+RAGFLOW_PROMPT_SHOW_QUOTE=true
+RAGFLOW_PROMPT_REFINE_MULTITURN=true
+RAGFLOW_CHAT_SYSTEM=You are an AI financial analyst. Answer clearly with numbers and sources when possible.
+
 AUTH_SECRET_KEY=deepsick
 AUTH_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=1440
